--- a/les-1/index.html
+++ b/les-1/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Test123</title>
 </head>
 <body>
+    <h1>Ik ben een grote titel</h1>
+    <h2>Ik ben een grote titel</h2>
+    <h3>Ik ben een grote titel</h3>
+    <h4>Ik ben een grote titel</h4>
+    <h5>Ik ben een grote titel</h5>
+    <h6>Ik ben een grote titel</h6>
+    <p>Hello world</p>
+    <p>Hello world</p>
+    <span>Hello world 2</span>
+    <span>Hello world 2</span>
+    <a href="https://duckduckgo.com" target="_blank">zoek</a>
     
+    <div>
+        <img src="https://img.huffingtonpost.com/asset/5dcc613f1f00009304dee539.jpeg?cache=QaTFuOj2IM&ops=crop_834_777_4651_2994%2Cscalefit_720_noupscale" alt="Dikke kat">
+    </div>
+
+    <!-- test -->
 </body>
 </html>
