--- a/les-1/index.html
+++ b/les-1/index.html
@@ -6,28 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test123</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        p {
-            background-color: darkorchid;
-        }
-
-        .klasse-1 {
-            color: green;
-        }
-
-        #id-1 {
-            background-color: lightgrey;
-        }
-    </style>
+    <link rel="stylesheet" href="style-2.css">
 </head>
 <body>
-    <h1 class="klasse-1">Ik ben een grote titel</h1>
+    <h1 class="klasse-1 klasse-2">Ik ben een grote titel</h1>
     <h2 id="id-1">Ik ben een grote titel</h2>
     <h3>Ik ben een grote titel</h3>
     <h4 class="klasse-1">Ik ben een grote titel</h4 class="klasse-1">
     <h5>Ik ben een grote titel</h5>
     <h6>Ik ben een grote titel</h6>
-    <p style="background-color: lightsteelblue;">Hello world</p>
+    <p >Hello world</p>
     <p class="klasse-1">Hello world</p class="klasse-1">
     <span>Hello world 2</span>
     <span>Hello world 2</span>
