--- a/les-1/index.html
+++ b/les-1/index.html
@@ -17,7 +17,7 @@
     <h6>Ik ben een grote titel</h6>
     <p >Hello world</p>
     <p class="klasse-1">Hello world</p class="klasse-1">
-    <span>Hello world 2</span>
+    <span class="klasse-3">Hello world 2</span>
     <span>Hello world 2</span>
     <a href="https://duckduckgo.com" target="_blank">zoek</a>
     
