--- a/les-3/ex-float-positioning/ex3/index.html
+++ b/les-3/ex-float-positioning/ex3/index.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Floats en Postioning oef 1</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="__style.css">
 </head>
 <body>
-    
+    <div class="outer">
+        <div class="inner">
+            
+        </div>
+    </div>
 </body>
 </html>
