--- a/les-3/ex-float-positioning/ex3/index.html
+++ b/les-3/ex-float-positioning/ex3/index.html
@@ -9,9 +9,20 @@
     <link rel="stylesheet" href="__style.css">
 </head>
 <body>
-    <div class="outer">
-        <div class="inner">
-            
+    <div class="body">
+        <div class="body-color color-1">
+            <div class="body-color color-2">
+                <div class="body-color color-3">
+                    <div class="body-color color-4"></div>
+                </div>
+            </div>
+        </div>
+        <div class="tail"></div>
+        <div class="paw-left"></div>
+        <div class="paw-right"></div>
+        <div class="head">
+            <div class="eye"></div>
+            <div class="ear"></div>
         </div>
     </div>
 </body>
