--- a/les-3/ex-float-positioning/ex3/index.html
+++ b/les-3/ex-float-positioning/ex3/index.html
@@ -25,5 +25,11 @@
             <div class="ear"></div>
         </div>
     </div>
+
+    <div class="tree"></div>
+
+    <div class="grass"></div>
+
+    <div class="bush"></div>
 </body>
 </html>
