--- a/les-4/ex-flex/ex-1/index.html
+++ b/les-4/ex-flex/ex-1/index.html
@@ -5,15 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Holy grail layout</title>
+        <!-- <link rel="stylesheet" href="__style.css" /> -->
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <header></header>
+        <header class="center-text"></header>
         <div class="container">
-            <aside class="left"></aside>
+            <aside class="center-text"></aside>
             <main></main>
-            <aside class="right"></aside>
+            <aside class="center-text"></aside>
         </div>
-        <footer></footer>
+        <footer class="center-text"></footer>
     </body>
 </html>
