--- a/les-4/ex-flex/ex-2/index.html
+++ b/les-4/ex-flex/ex-2/index.html
@@ -35,6 +35,68 @@
                     </div>
                 </nav>
             </div>
+            <div class="bottom-header">
+                <h1>The new standard in blabla</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+            </div>
         </header>
+        <div class="banner">
+            <p>
+                New Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-image">
+                    <img src="https://picsum.photos/100/100" alt="random" />
+                </div>
+                <h4>Tristique senectus et netus et.</h4>
+                <p>
+                    Purus semper eget duis at tellus at urna condimentum mattis.
+                    Non blandit massa enim nec. Integer enim neque volutpat ac
+                    tincidunt vitae semper quis. Accumsan tortor posuere ac ut
+                    consequat semper viverra nam.
+                </p>
+                <div class="card-link">
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="https://picsum.photos/100/100" alt="random" />
+                </div>
+                <h4>Tristique senectus et netus et.</h4>
+                <p>
+                    Purus semper eget duis at tellus at urna condimentum mattis.
+                    Non blandit massa enim nec. Integer enim neque volutpat ac
+                    tincidunt vitae semper quis. Accumsan tortor posuere ac ut
+                    consequat semper viverra nam.
+                </p>
+                <div class="card-link">
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img src="https://picsum.photos/100/100" alt="random" />
+                </div>
+                <h4>Leo integer malesuada nunc vel risus.</h4>
+                <p>
+                    Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce
+                    ut placerat orci nulla pellentesque dignissim enim. Libero
+                    id faucibus nisl tincidunt eget nullam. Commodo viverra
+                    maecenas accumsan lacus vel facilisis.
+                </p>
+                <div class="card-link">
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
