--- a/les-4/ex-flex/ex-2/index.html
+++ b/les-4/ex-flex/ex-2/index.html
@@ -98,5 +98,154 @@
                 </div>
             </div>
         </div>
+        <div class="text-banner">
+            <h2>Perfect for developers or designers!</h2>
+            <p>
+                Vel fringilla est ullamcorper eget nulla facilisi. Nulla
+                facilisi nullam vehicula ipsum a. Neque egestas congue quisque
+                egestas diam in arcu cursus.
+            </p>
+        </div>
+        <div class="grid">
+            <div class="grid-row">
+                <div class="grid-item grid-item-1">
+                    <p class="title">Hello World</p>
+                    <p class="subtitle">What is up?</p>
+                </div>
+                <div class="grid-item grid-item-1">
+                    <p class="title">Foo</p>
+                    <p class="subtitle">Bar</p>
+                </div>
+                <div class="grid-item grid-item-1">
+                    <p class="title">Third column</p>
+                    <p class="subtitle">With some content</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Proin ornare magna eros, eu pellentesque tortor
+                        vestibulum ut. Maecenas non massa sem. Etiam finibus
+                        odio quis feugiat facilisis.
+                    </p>
+                </div>
+            </div>
+            <div class="grid-row">
+                <div class="grid-col grid-item-2">
+                    <div class="grid-row grid-item-half">
+                        <div class="grid-col grid-item-half">
+                            <div class="grid-item grid-item-half">
+                                <p class="title">Vertical tiles</p>
+                                <p class="subtitle">Top box</p>
+                            </div>
+                            <div class="grid-item grid-item-half">
+                                <p class="title">Vertical tiles</p>
+                                <p class="subtitle">Bottom box</p>
+                            </div>
+                        </div>
+                        <div class="grid-item grid-item-half">
+                            <p class="title">Middle box</p>
+                            <p class="subtitle">With an image</p>
+                            <div class="image">
+                                <img
+                                    src="https://picsum.photos/640/480/?random"
+                                    alt="Description"
+                                />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-item grid-item-half">
+                        <p class="title">Wide column</p>
+                        <p class="subtitle">Aligned with the right column</p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Proin ornare magna eros, eu pellentesque
+                            tortor vestibulum ut. Maecenas non massa sem. Etiam
+                            finibus odio quis feugiat facilisis.
+                        </p>
+                    </div>
+                </div>
+                <div class="grid-item grid-item-1">
+                    <p class="title">
+                        Tall column
+                    </p>
+                    <p class="subtitle">
+                        With even more content
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Etiam semper diam at erat pulvinar, at pulvinar felis
+                        blandit. Vestibulum volutpat tellus diam, consequat
+                        gravida libero rhoncus ut. Morbi maximus, leo sit amet
+                        vehicula eleifend, nunc dui porta orci, quis semper odio
+                        felis ut quam.
+                    </p>
+                    <p>
+                        Suspendisse varius ligula in molestie lacinia. Maecenas
+                        varius eget ligula a sagittis. Pellentesque interdum,
+                        nisl nec interdum maximus, augue diam porttitor lorem,
+                        et sollicitudin felis neque sit amet erat. Maecenas
+                        imperdiet felis nisi, fringilla luctus felis hendrerit
+                        sit amet. Aenean vitae gravida diam, finibus dignissim
+                        turpis. Sed eget varius ligula, at volutpat tortor.<br />
+                    </p>
+                    <p>
+                        Integer sollicitudin, tortor a mattis commodo, velit
+                        urna rhoncus erat, vitae congue lectus dolor consequat
+                        libero. Donec leo ligula, maximus et pellentesque sed,
+                        gravida a metus. Cras ullamcorper a nunc ac porta.
+                        Aliquam ut aliquet lacus, quis faucibus libero. Quisque
+                        non semper leo.
+                    </p>
+                </div>
+            </div>
+            <div class="grid-row">
+                <div class="grid-item grid-item-1">
+                    <p class="title">Side column</p>
+                    <p class="subtitle">With some content</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Proin ornare magna eros, eu pellentesque tortor
+                        vestibulum ut. Maecenas non massa sem. Etiam finibus
+                        odio quis feugiat facilisis.
+                    </p>
+                </div>
+                <div class="grid-item grid-item-2">
+                    <p class="title">Main column</p>
+                    <p class="subtitle">With some content</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Proin ornare magna eros, eu pellentesque tortor
+                        vestibulum ut. Maecenas non massa sem. Etiam finibus
+                        odio quis feugiat facilisis.
+                    </p>
+                </div>
+            </div>
+            <div class="grid-row">
+                <div class="grid-item grid-item-2">
+                    <p class="title">Murphy's law</p>
+                    <p class="subtitle">
+                        Anything that can go wrong will go wrong
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Proin ornare magna eros, eu pellentesque tortor
+                        vestibulum ut. Maecenas non massa sem. Etiam finibus
+                        odio quis feugiat facilisis.
+                    </p>
+                </div>
+                <div class="grid-item grid-item-1">
+                    <p class="title">
+                        Main column
+                    </p>
+                    <p class="subtitle">
+                        With some content
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Proin ornare magna eros, eu pellentesque tortor
+                        vestibulum ut. Maecenas non massa sem. Etiam finibus
+                        odio quis feugiat facilisis.
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
