--- a/les-6/ex-1/index.html
+++ b/les-6/ex-1/index.html
@@ -34,6 +34,11 @@
                         <a href="#">Help</a>
                     </div>
                 </nav>
+                <nav class="nav-mobile">
+                    <span class="hamburger hamburger-top"></span>
+                    <span class="hamburger hamburger-middle"></span>
+                    <span class="hamburger hamburger-bottom"></span>
+                </nav>
             </div>
             <div class="bottom-header">
                 <h1>The new standard in blabla</h1>
